--- a/package.json
+++ b/package.json
@@ -8,17 +8,29 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "watch": "nodemon --exec ts-node src/index.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate", 
+    "db:studio": "drizzle-kit studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["discord", "bot", "3x-ui", "vpn", "proxy"],
+  "keywords": [
+    "discord",
+    "bot",
+    "3x-ui",
+    "vpn",
+    "proxy"
+  ],
   "author": "",
   "license": "AGPL-3.0-or-later",
   "type": "commonjs",
   "dependencies": {
+    "@libsql/client": "^0.15.9",
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.44.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
